# bdx

./: .gitignore  Makefile  README.md  install_xapian_bindings.sh  pyproject.toml
.github/workflows/: ci.yml
bdx/: __init__.py  binary.py  cli.py  graph.py  index.py  query_parser.py
tests/: conftest.py  test_binary.py  test_cli.py  test_graph.py  test_index.py  test_query_parser.py
tests/fixture/: Makefile  toplev.c
tests/fixture/subdir/: bar.cpp  foo.c
